Bug 257583 - Viewport layout size is sometimes incorrect when a site specifies an initial scale
Summary: Viewport layout size is sometimes incorrect when a site specifies an initial ...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Layout and Rendering (show other bugs)
Version: Other
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nobody
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-05-31 19:32 PDT by Richard Robinson
Modified: 2023-06-02 17:11 PDT (History)
4 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Richard Robinson 2023-05-31 19:32:24 PDT
rdar://109483331
Comment 1 Richard Robinson 2023-05-31 19:40:46 PDT
Pull request: https://github.com/WebKit/WebKit/pull/14566
Comment 2 EWS 2023-06-02 17:11:13 PDT
Committed 264842@main (3cfe137626e4): <https://commits.webkit.org/264842@main>

Reviewed commits have been landed. Closing PR #14566 and removing active labels.