Source/WebCore/page/ViewportConfiguration.h
@@ -57,12 +57,15 @@ public:
         bool heightIsSet { false };
         bool initialScaleIsSet { false };
 
+        bool ignoreInitialScaleForLayoutWidth { false };
+
         bool operator==(const Parameters& other) const
         {
             return width == other.width && height == other.height
                 && initialScale == other.initialScale && initialScaleIgnoringLayoutScaleFactor == other.initialScaleIgnoringLayoutScaleFactor && minimumScale == other.minimumScale && maximumScale == other.maximumScale
                 && allowsUserScaling == other.allowsUserScaling && allowsShrinkToFit == other.allowsShrinkToFit && avoidsUnsafeArea == other.avoidsUnsafeArea
-                && widthIsSet == other.widthIsSet && heightIsSet == other.heightIsSet && initialScaleIsSet == other.initialScaleIsSet;
+                && widthIsSet == other.widthIsSet && heightIsSet == other.heightIsSet && initialScaleIsSet == other.initialScaleIsSet
+                && ignoreInitialScaleForLayoutWidth == other.ignoreInitialScaleForLayoutWidth;
         }
     };
 
